--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-music-visualizer": "^1.1.0",
     "react-router-dom": "^6.22.3",
     "sass": "^1.72.0",
+    "uuid": "^9.0.1",
     "vitest": "^1.4.0"
   },
   "devDependencies": {
