--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "react": "^18.2.0",
+    "react-audio-spectrum": "^0.1.0",
     "react-dom": "^18.2.0",
     "react-music-visualizer": "^1.1.0",
     "react-router-dom": "^6.22.3",
