--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_BACKEND_URL=http://localhost:8080
-#VITE_BACKEND_URL=http://timwallace.ca
+#VITE_BACKEND_URL=http://localhost:8080
+VITE_BACKEND_URL=https://timwallace.ca
